--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "certwall.js",
   "scripts": {
-    "first_run": "npm install && cd docs && mkdir certificates && cd .. && git branch gh-pages && git checkout gh-pages",
-    "certwall": "git checkout gh-pages && node certwall && git add . && git commit -m \"updated gh-pages\" && git push && echo \"Updated in gh-pages\"",
+    "env": "npm install && cd docs && mkdir certificates && cd ..",
+    "certwall": "node certwall",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "vmaffioli",
